--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="b5img/banner.jpg" class="d-block w-100 object-fit-cover " alt="...">
+      <img src="banner.jpg" class="d-block w-100 object-fit-cover " alt="...">
       <div class="carousel-caption d-md-block text-white">
         <h5 >First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="b5img/banner1.jpg" class="d-block w-100 object-fit-cover" alt="...">
+      <img src="banner1.jpg" class="d-block w-100 object-fit-cover" alt="...">
       <div class="carousel-caption  d-md-block text-white">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="b5img/banner2.jpg" class="d-block w-100  object-fit-cover" alt="...">
+      <img src="banner2.jpg" class="d-block w-100  object-fit-cover" alt="...">
       <div class="carousel-caption  d-md-block text-white">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -160,7 +160,7 @@
 
                 
          <div class="col-sm-12 col-md-6 col-lg-6 col-12 m-auto text-end" data-aos="fade-right" data-aos-offset="200">
-            <img src="b5img/s4.jpg" alt="" srcset="" class="img-fluid img-thumbnail object-fit-cover">
+            <img src="s4.jpg" alt="" srcset="" class="img-fluid img-thumbnail object-fit-cover">
          </div>
 
 </section>
@@ -266,7 +266,7 @@
                    
                  <div class="card">
       <div class="card-body">
-        <img src="b5img/s4.jpg" class="img-fluid rounded-circle border border-primary p-2 object-fit-cover" >
+        <img src="s4.jpg" class="img-fluid rounded-circle border border-primary p-2 object-fit-cover" >
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text mt-4">With supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">read more</a>
@@ -278,7 +278,7 @@
 
                    <div class="card">
       <div class="card-body">
-        <img src="b5img/s2.jpg" class="img-fluid rounded-circle border border-primary p-2 object-fit-cover" >
+        <img src="s2.jpg" class="img-fluid rounded-circle border border-primary p-2 object-fit-cover" >
         <h5 class="card-title mt-4">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">read more</a>
@@ -291,7 +291,7 @@
 
                      <div class="card">
       <div class="card-body">
-        <img src="b5img/s3.jpg" class="img-fluid rounded-circle border border-primary p-2 object-fit-cover" >
+        <img src="s3.jpg" class="img-fluid rounded-circle border border-primary p-2 object-fit-cover" >
         <h5 class="card-title mt-4">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">read more</a>
@@ -363,7 +363,7 @@
           <div class="col-sm-12 col-md-6 col-lg-6 col-12 m-auto text-end" data-aos="fade-right" data-aos-offset="200">
 
 
-            <img src="b5img/s6.jpg" class="b5img-fluid b5img b5img-thumbnail p-2 " alt="" srcset="">
+            <img src="s6.jpg" class="b5img-fluid b5img b5img-thumbnail p-2 " alt="" srcset="">
           </div>
         </div>
 
@@ -385,4 +385,5 @@
   AOS.init();
 </script>
   </body>
+
 </html>
